Add 'noProductionJavascript' to config for future reference

--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,5 @@ siteDescr = "Passionate about creating digital products–obsessed with simplici
 siteAuthor = "Dan Klammer"
 
 linkPrefix = "/"
+
+# noProductionJavascript = "true"
