--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,8 @@ title: Dan Klammer
 email: me@danklammer.com
 description: Designer & Developer from Cleveland, Ohio
 tagline: Passionate about creating digital products—obsessed with simplicity & performance.
-baseurl: "/"
 url: "http://danklammer.com"
-# production_url: http://danklammer.com
+production_url: http://danklammer.com
 twitter_username: danklammer
 github_username:  danklammer
 
