More SEO: Added descriptions to main pages

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Dan Klammer
 email: me@danklammer.com
 description: Designer & Developer from Cleveland, Ohio
-tagline: Passionate about creating digital products—obsessed with simplicity & performance.
+tagline: Passionate about creating digital products—obsessed with simplicity & experience.
 url: "http://danklammer.com"
 production_url: http://danklammer.com
 splash: true
