Now all JS is loaded at the bottom of doc, Use ModuleJS Args in front matter

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,6 @@ sass:
   style: compressed
 compress_html:
   clippings: all
-  comments: ["<!-- ", " -->"]
+  comments: ["/* ", " */"]
   endings: all
   blanklines: false
