Add Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ tagline: Passionate about creating digital products—obsessed with simplicity &
 url: "http://danklammer.com"
 production_url: http://danklammer.com
 contact_email: mailman@danklammer.com
+google_analytics: UA-3896262-8
 
 # Splash page & drafts
 show_splash: false
