--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
 title: Dan Klammer
@@ -29,3 +23,7 @@ compress_html:
   comments: ["/* ", " */"]
   endings: all
   blanklines: false
+
+# Jekyll plugins
+gems:
+  - jekyll-sitemap
