--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # Site settings
 title: Dan Klammer
 email: me@danklammer.com
-description: Designer & Developer from Cleveland, Ohio
-tagline: Passionate about creating digital products—obsessed with simplicity & experience.
+description: Web Designer & Developer from Cleveland, Ohio
+tagline: Pushing to create good design, simple apps, faster websites, and the best user experiences.
 url: "http://danklammer.com"
 production_url: http://danklammer.com
 contact_email: mailman@danklammer.com
