--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: Dan Klammer
 email: me@danklammer.com
 description: Web Designer & Developer from Cleveland, Ohio
 tagline: Pushing to create good design, simple apps, faster websites, and the best user experiences.
-url: "http://danklammer.com"
-production_url: http://danklammer.com
+url: "https://danklammer.com"
+production_url: https://danklammer.com
 contact_email: mailman@danklammer.com
 google_analytics: UA-3896262-8
 
